feat: refactor txStatus as asset

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -164,6 +164,7 @@
     "pay": "Paga",
     "payable": "Pagadero a",
     "payable_placeholder": "Pagable en días",
+    "pending_tx": "La hipoteca de",
     "punitory_rate": "Tasa de interés punitiva",
     "punitory_rate_placeholder": "Tasa punitiva",
     "request": "Solicitar una hipoteca",
