--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -166,6 +166,7 @@
     "pay": "Payer",
     "payable": "Payable à",
     "payable_placeholder": "Payable en jours",
+    "pending_tx": "Hypothèque pour",
     "punitory_rate": "Taux d'intérêt punitif",
     "punitory_rate_placeholder": "Taux punitif",
     "request": "Demander une hypothèque",
