--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -160,6 +160,7 @@
     "pay": "工资",
     "payable": "应付",
     "payable_placeholder": "应付天数",
+    "pending_tx": "按揭",
     "punitory_rate": "惩罚性利率",
     "punitory_rate_placeholder": "惩罚性利率",
     "request": "申请抵押",
