--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -163,6 +163,7 @@
     "pay": "Pay",
     "payable": "Payable at",
     "payable_placeholder": "Payable in days",
+    "pending_tx": "The mortgage for",
     "punitory_rate": "Punitory interest rate",
     "punitory_rate_placeholder": "Punitory rate",
     "request": "Requesting a Mortgage",
