--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -14,6 +14,7 @@
     "on_sale": "En Venta: ",
     "owner": "Dueño: {owner}",
     "road": "Carretera",
+    "your_estate": "Su estado",
     "your_parcel": "Tu parcela"
   },
   "buy_mana": {
