--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -15,6 +15,7 @@
     "on_sale": "A vendre: ",
     "owner": "Propriétaire : {owner}",
     "road": "Route",
+    "your_estate": "Votre domaine",
     "your_parcel": "Votre parcelle"
   },
   "buy_mana": {
