--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -108,7 +108,8 @@
     "unauthorized": "Unauthorized",
     "undo": "Undo",
     "wallet_address": "Wallet address",
-    "website": "Website"
+    "website": "Website",
+    "clear": "Clear"
   },
   "homepage": {
     "get_started": "Get Started",
