--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -75,6 +75,7 @@
     "blog": "Blog",
     "cancel": "Cancelar",
     "change": "Cambio",
+    "clear": "Borrar historial",
     "click_here": "Pincha aquí",
     "community_chat": "Chat de la comunidad",
     "confirm": "Confirmar",
