--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -76,6 +76,7 @@
     "blog": "Blog",
     "cancel": "Annuler",
     "change": "Changement",
+    "clear": "Clair",
     "click_here": "Cliquez ici",
     "community_chat": "Chat communautaire",
     "confirm": "Confirmer",
