--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -74,6 +74,7 @@
     "blog": "블로그",
     "cancel": "취소",
     "change": "변화",
+    "clear": "명확한",
     "click_here": "여기를 클릭하십시오",
     "community_chat": "커뮤니티 채팅",
     "confirm": "확인",
