--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -73,6 +73,7 @@
     "blog": "博客",
     "cancel": "取消",
     "change": "更改",
+    "clear": "明确",
     "click_here": "点击这里",
     "community_chat": "社区聊天",
     "confirm": "确认",
