--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -4,7 +4,7 @@
     "completed": "Completada",
     "no_activity": "No tienes actividad por el momento.",
     "pending": "Pendiente",
-    "start": "¡Tu puedes empezar a comerciar en el {marketplace}!"
+    "start": "¡Usted puede comenzar a negociar en el {marketplace}!"
   },
   "address": {
     "its_you": "Eres tú!"
