--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -5,7 +5,7 @@
     "completed": "Terminé",
     "no_activity": "Vous n'avez pas encore d'activité.",
     "pending": "En attente",
-    "start": "Votre capable de commencer à négocier au {marketplace}!"
+    "start": "Vous êtes en mesure de commencer à négocier au {marketplace}!"
   },
   "address": {
     "its_you": "C'est toi"
