--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -5,7 +5,7 @@
     "completed": "완료 됨",
     "no_activity": "아직 활동이 없습니다.",
     "pending": "보류",
-    "start": "당신은 {marketplace}에서 거래를 시작할 수 있습니다!"
+    "start": "{marketplace}에서 거래를 시작할 수 있습니다!"
   },
   "address": {
     "its_you": "너야"
