--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -4,7 +4,7 @@
     "completed": "已完成",
     "no_activity": "您尚无操作历史。",
     "pending": "待定",
-    "start": "你能够在{marketplace}开始交易！"
+    "start": "你可以在{marketplace}开始交易！"
   },
   "address": {
     "its_you": "您的"
