--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -94,6 +94,7 @@
     "mortgages": "모기지",
     "owned_by": "에게 소유 된",
     "owned_by_link": "{address_link} 소유",
+    "paid_at": "유료",
     "parcels": "필지",
     "profile": "나의 토지",
     "request": "의뢰",
@@ -136,6 +137,7 @@
     "amount": "양",
     "amount_placeholder": "MANA의 금액",
     "cancel": "모기지 취소",
+    "claim": "소유권 주장 소포",
     "duration": "지속",
     "duration_placeholder": "기간 (일)",
     "errors": {
@@ -153,6 +155,11 @@
     "interest_rate": "이자율",
     "interest_rate_placeholder": "이자율",
     "oracle": "오라클 계약 주소",
+    "outstanding_amount": "미납금",
+    "partial_payment": "부분 지불",
+    "partial_payment_desc":
+      "당신은 토지 {parcel_name}를 구입하기 위해 모기지에 대한 부분적인 지불을하려고합니다",
+    "pay": "지불",
     "payable": "지불 할 곳 :",
     "payable_placeholder": "일 단위로 지불 가능",
     "punitory_rate": "도살장 이자율",
@@ -274,7 +281,6 @@
     "on_sale": "판매 중"
   },
   "publication": {
-    "canceled": "취소 됨",
     "sold": "판매 됨",
     "view": "보기"
   },
@@ -321,6 +327,7 @@
     "buy_mana": "너는 {mana} MANA를 구입했다.",
     "cancel": "{parcel_link}의 {publication_link}을 취소했습니다.",
     "cancel_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 취소합니다.",
+    "claim_mortgage_resolution": "당신은 {parcel_link}을 주장했습니다.",
     "create_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 요청했습니다.",
     "disapproved":
       "귀하를 대신하여 {marketplace_contract_link}의 MANA 운영을 허가받지 않았습니다.",
@@ -334,6 +341,8 @@
       "{action} 귀하를 대신하여 MANA를 운영하는 {mortgage_contract_link}.",
     "mortgage_rcn":
       "{action} 귀하를 대신하여 RCN을 운영하는 {mortgage_contract_link}.",
+    "pay_mortgage":
+      "소포 {parcel_link}을 구입하기 위해 모기지에 대해 {amount}의 부분 지불을했습니다.",
     "publish": "{parcel_link}을(를) 게시했습니다.",
     "transfer": "{parcel_link}을 {owner_link}로 이전했습니다.",
     "transfer_mana": "{mana} MANA를 {address_link}으로 이전했습니다."
