fix: translate message of tabs with empty assets

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -98,6 +98,7 @@
     "paid_at": "Paid at",
     "parcels": "Parcels",
     "profile": "My Land",
+    "publications": "Publications",
     "request": "Request",
     "retry": "Retry",
     "revoke": "Revoke",
