--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -98,6 +98,7 @@
     "paid_at": "Pagada el",
     "parcels": "Parcelas",
     "profile": "Mi LAND",
+    "publications": "Publicaciones",
     "request": "Solicitud",
     "retry": "Reintentar",
     "revoke": "Revocar",
