--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -97,6 +97,7 @@
     "paid_at": "유료",
     "parcels": "필지",
     "profile": "나의 토지",
+    "publications": "간행물",
     "request": "의뢰",
     "retry": "다시 해 보다",
     "revoke": "취소",
