--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -97,6 +97,7 @@
     "paid_at": "付费",
     "parcels": "地块",
     "profile": "我的虚拟土地",
+    "publications": "出版物",
     "request": "请求",
     "retry": "重试",
     "revoke": "撤消",
