--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -99,6 +99,7 @@
     "paid_at": "Payé à",
     "parcels": "Parcelles",
     "profile": "Mes LANDs",
+    "publications": "Publications",
     "request": "Demande",
     "retry": "Recommencez",
     "revoke": "Révoquer",
