--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -327,8 +327,14 @@
   "sign_in": {
     "account_unlocked": "Assurez-vous que votre compte est déverrouillé",
     "get_started": "Commencer",
-    "options":
-      "Téléchargez {metamask_link} ou {mist_link} ou accédez à votre lien {ledger_nano_link} pour utiliser le Marketplace."
+    "intro":
+      "Tout d'abord, vous aurez besoin d'un endroit sûr pour garder tout votre NT1.",
+    "options": {
+      "desktop":
+        "Vous pouvez utiliser l'extension {metamask_link} ou un portefeuille matériel comme {ledger_nano_link}.",
+      "mobile":
+        "Vous pouvez utiliser des navigateurs mobiles tels que {toshi_link} ou {imtoken_link}."
+    }
   },
   "transaction": {
     "approved":
