--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -299,7 +299,7 @@
     "approve_mortgage_mana":
       "Autorice a {mortgage_contract_link} para operar MANA en su nombre",
     "approve_mortgage_rcn":
-      "Autorice el {mortgage_contract_link} ​​para operar RCN en su nombre",
+      "Autorice el {mortgage_contract_link} para operar RCN en su nombre",
     "authorization": "Autorización",
     "authorize":
       "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
@@ -316,7 +316,7 @@
     "unauthorize_land_check":
       "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
     "you_approved_mortgage_mana":
-      "Usted ha autorizado el {mortgage_contract_link} ​​para operar MANA en su nombre",
+      "Usted ha autorizado el {mortgage_contract_link} para operar MANA en su nombre",
     "you_approved_mortgage_rcn":
       "Usted ha autorizado {mortgage_contract_link} para operar RCN en su nombre",
     "you_authorized":
@@ -326,12 +326,12 @@
     "account_unlocked": "Revisa que tu cuenta esté desbloqueada.",
     "get_started": "Empezar",
     "intro":
-      "En primer lugar, necesitarás un lugar seguro para guardar todo tu LAND.",
+      "En primer lugar necesitarás un lugar seguro para guardar todo tu LAND.",
     "options": {
       "desktop":
-        "Puede usar la extensión {metamask_link} o una billetera de hardware como {ledger_nano_link}.",
+        "Puedes usar la extensión {metamask_link} o una billetera de hardware como {ledger_nano_link}.",
       "mobile":
-        "Puede usar navegadores móviles como {toshi_link} o {imtoken_link}."
+        "Puedes usar navegadores móviles como {toshi_link} o {imtoken_link}."
     }
   },
   "transaction": {
