--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -3,7 +3,12 @@
     "completed": "Completed",
     "no_activity": "You have no activity yet.",
     "pending": "Pending",
-    "start": "You can start by approving some MANA on your {settings_link}"
+    "start": "You can start by approving some MANA on your {settings_link}",
+    "clear": {
+      "title": "Delete transaction history",
+      "body":
+        "Once you delete your transaction history you can't reverse the action, are you sure you want to continue?"
+    }
   },
   "address": {
     "its_you": "It's you"
