--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -1,5 +1,10 @@
 {
   "activity": {
+    "clear": {
+      "body":
+        "거래 내역을 삭제하면 해당 작업을 되돌릴 수 없습니다. 계속 하시겠습니까?",
+      "title": "거래 내역 삭제"
+    },
     "completed": "완료 됨",
     "no_activity": "아직 활동이 없습니다.",
     "pending": "보류",
