--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -1,5 +1,10 @@
 {
   "activity": {
+    "clear": {
+      "body":
+        "一旦你删除了你的交易记录，你不能撤销这个行动，你确定你想继续吗？",
+      "title": "删除交易记录"
+    },
     "completed": "已完成",
     "no_activity": "您尚无操作历史。",
     "pending": "待定",
