feat: Show estates on map (#252)
* feat: add estate translation to default locale

* feat: refactor shared folder to support asset component

* feat: run translate script

* fix: some imports where still pointing bad

* feat: solve estate connections and pass it to webworker

* fix: show appropiate colors for estate owners

* feat: create estate service with getByParcels and show it on the map renderer

* feat: create API endpoint for map in range

* feat: create map fetching flow to render estates

* fix: merge no-conflicts fix to dont break app

* fix: some review comments

* fix: refactor to delete isSameValue functions

* fix: using cache again on parcel canvas

* fix: parcel merging. cache. check for parcel

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -15,6 +15,7 @@
     "on_sale": "On Sale: ",
     "owner": "Owner: {owner}",
     "road": "Road",
+    "your_estate": "Your estate",
     "your_parcel": "Your parcel"
   },
   "buy_mana": {
