--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -16,6 +16,7 @@
     "on_sale": "판매 중 :",
     "owner": "소유자 : {owner}",
     "road": "도로",
+    "your_estate": "당신의 재산",
     "your_parcel": "당신의 토지"
   },
   "buy_mana": {
