--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -15,6 +15,7 @@
     "on_sale": "出售中：",
     "owner": "所有者：{owner}",
     "road": "路",
+    "your_estate": "你的遗产",
     "your_parcel": "您的地块"
   },
   "buy_mana": {
