feat: clear activity log (#269)
* feat: create clear tx history button

* feat: run translate script and fix [es]

* feat: render clear button only if there are transactions

* fix: finish some change requests from reviews

* fix: set activity page variables to follow the design

* feat: create reusable Prompt component

* feat: show clear confirmation prompt on activity page

* feat: run translation script

* feat: adjust modal to current design and use translations

* fix: styles

* feat: simplify clear flow

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -1,6 +1,11 @@
 {
   "activity": {
     "approve": "You can start by approving some MANA on your {settings_link}",
+    "clear": {
+      "body":
+        "Once you delete your transaction history you can't reverse the action, are you sure you want to continue?",
+      "title": "Delete transaction history"
+    },
     "completed": "Completed",
     "no_activity": "You have no activity yet.",
     "pending": "Pending",
@@ -77,6 +82,7 @@
     "blog": "Blog",
     "cancel": "Cancel",
     "change": "Change",
+    "clear": "Clear history",
     "click_here": "Click here",
     "community_chat": "Community Chat",
     "confirm": "Confirm",
