--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -2,6 +2,11 @@
   "activity": {
     "approve":
       "{settings_link}에서 일부 MANA를 승인함으로써 시작할 수 있습니다.",
+    "clear": {
+      "body":
+        "거래 내역을 삭제하면 해당 작업을 되돌릴 수 없습니다. 계속 하시겠습니까?",
+      "title": "거래 내역 삭제"
+    },
     "completed": "완료 됨",
     "no_activity": "아직 활동이 없습니다.",
     "pending": "보류",
@@ -77,6 +82,7 @@
     "blog": "블로그",
     "cancel": "취소",
     "change": "변화",
+    "clear": "명확한",
     "click_here": "여기를 클릭하십시오",
     "community_chat": "커뮤니티 채팅",
     "confirm": "확인",
