--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -1,6 +1,11 @@
 {
   "activity": {
     "approve": "您需要先在您的设置页面{settings_link}上授权同意使用 MANA",
+    "clear": {
+      "body":
+        "一旦你删除了你的交易记录，你不能撤销这个行动，你确定你想继续吗？",
+      "title": "删除交易记录"
+    },
     "completed": "已完成",
     "no_activity": "您尚无操作历史。",
     "pending": "待定",
@@ -76,6 +81,7 @@
     "blog": "博客",
     "cancel": "取消",
     "change": "更改",
+    "clear": "明确",
     "click_here": "点击这里",
     "community_chat": "社区聊天",
     "confirm": "确认",
