--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -151,6 +151,7 @@
     "amount_placeholder": "Montant à MANA",
     "cancel": "Annuler l'hypothèque",
     "claim": "Demande de colis",
+    "defaulted_in": "Par défaut dans",
     "duration": "Durée",
     "duration_placeholder": "Durée en jours",
     "errors": {
